--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 .sky{
     height: 100vh;
     width: 100%;
-    background-image: url(.//assets/field_1308-43289.avif);
+    background-image: url(./assets/field_1308-43289.avif);
     background-repeat: no-repeat;
     position: absolute;
     background-size: cover;
@@ -17,7 +17,7 @@ body{
 .trees{
     height: 100vh;
     width: 100%;
-    background-image: url(.//assets/trees.png);
+    background-image: url(./assets/trees.png);
     background-size: cover;
     position: absolute;
     top: -144px;
@@ -26,7 +26,7 @@ body{
     top: 70vh;
     height: 30vh;
     width: 600vw;
-    background-image: url(.//assets/track.png);
+    background-image: url(./assets/track.png);
      
     position: absolute;
     background-repeat: repeat-x;
@@ -35,7 +35,7 @@ body{
 .car{
     height: 100px;
     width: 330px;
-    background-image: url(.//assets/car_body.png);
+    background-image: url(./assets/car_body.png);
     background-size: cover;
     background-repeat: no-repeat;
     position: absolute;
